--- a/package.json
+++ b/package.json
@@ -9,15 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blockshake/defly-connect": "^1.0.0",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
+    "@json-rpc-tools/utils": "^1.7.6",
     "@next/font": "13.1.1",
+    "@perawallet/connect": "^1.1.0",
+    "@randlabs/myalgo-connect": "^1.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-query": "^4.22.0",
+    "@txnlab/use-wallet": "1.1.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@walletconnect/client": "^1.8.0",
+    "algorand-walletconnect-qrcode-modal": "^1.8.0",
+    "algosdk": "^2.0.0",
+    "axios": "^1.2.2",
+    "big.js": "^6.2.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-tooltip": "^5.5.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/big.js": "^6.1.6",
+    "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.6.0",
+    "postcss": "^8.4.21",
+    "prettier": "2.8.2",
+    "tailwindcss": "^3.2.4"
   }
 }
