--- a/package.json
+++ b/package.json
@@ -13,19 +13,17 @@
     "@daffiwallet/connect": "^1.0.3",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "@json-rpc-tools/utils": "^1.7.6",
     "@next/font": "13.1.1",
     "@perawallet/connect": "^1.2.1",
     "@randlabs/myalgo-connect": "^1.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.22.0",
-    "@txnlab/use-wallet": "1.3.2",
+    "@txnlab/use-wallet": "^2.0.0",
     "@types/node": "18.16.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "@walletconnect/client": "^1.8.0",
-    "algorand-walletconnect-qrcode-modal": "^1.8.0",
-    "algosdk": "^2.1.0",
+    "@walletconnect/modal-sign-html": "^2.5.4",
+    "algosdk": "2.4.0",
     "axios": "^1.2.2",
     "big.js": "^6.2.1",
     "eslint": "8.43.0",
