--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@randlabs/myalgo-connect": "^1.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tanstack/react-query": "^4.22.0",
-    "@txnlab/use-wallet": "^2.0.0",
+    "@txnlab/use-wallet": "2.0.0",
     "@types/node": "18.16.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
