--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "@blockshake/defly-connect": "^1.1.5",
+    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
     "@daffiwallet/connect": "^1.0.3",
-    "@headlessui/react": "^1.7.7",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/orbitron": "^5.0.12",
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "@perawallet/connect": "^1.2.1",
@@ -28,10 +34,12 @@
     "big.js": "^6.2.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.1.1",
+    "framer-motion": "^10.16.4",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.11.0",
     "react-tooltip": "^5.5.1",
     "typescript": "4.9.5"
   },
