--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -35,6 +37,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^10.16.4",
+    "gh-pages": "^6.0.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
