--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-dom": "18.0.10",
     "@walletconnect/modal-sign-html": "^2.5.4",
     "algosdk": "2.4.0",
+    "autoprefixer": "9.8.6",
     "axios": "^1.2.2",
     "big.js": "^6.2.1",
     "eslint": "8.43.0",
@@ -44,14 +45,13 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.11.0",
     "react-tooltip": "^5.5.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@types/big.js": "^6.1.6",
-    "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.21",
-    "prettier": "2.8.8",
-    "tailwindcss": "^3.2.4"
+    "prettier": "2.8.8"
   }
 }
