--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.11.0",
     "react-tooltip": "^5.5.1",
+    "react-virtualized": "^9.22.5",
     "tailwindcss": "^3.3.3",
     "typescript": "4.9.5"
   },
