--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^10.16.4",
+    "fs-extra": "^11.1.1",
     "gh-pages": "^6.0.0",
+    "minimist": "^1.2.8",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -47,10 +49,12 @@
     "react-tooltip": "^5.5.1",
     "react-virtualized": "^9.22.5",
     "tailwindcss": "^3.3.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@types/big.js": "^6.1.6",
+    "@types/fs-extra": "^11.0.2",
     "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.21",
     "prettier": "2.8.8"
