--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "autoprefixer": "9.8.6",
     "axios": "^1.2.2",
     "big.js": "^6.2.1",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.43.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^10.16.4",
     "fs-extra": "^11.1.1",
     "gh-pages": "^6.0.0",
+    "ipfs-http-client": "^60.0.1",
     "minimist": "^1.2.8",
     "next": "13.1.1",
     "react": "18.2.0",
