Added ARC69 and ARC19 Collection Minting

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "autoprefixer": "9.8.6",
     "axios": "^1.2.2",
     "big.js": "^6.2.1",
+    "bs58": "^5.0.0",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.43.0",
     "eslint-config-next": "13.1.1",
@@ -43,6 +44,7 @@
     "gh-pages": "^6.0.0",
     "ipfs-http-client": "^60.0.1",
     "minimist": "^1.2.8",
+    "multiformats": "^12.1.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
