--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "incremental": true,
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Games/Snake.js"],
   "exclude": ["node_modules"]
 }
