--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "big.js": "^6.2.1",
     "bs58": "^5.0.0",
     "cheerio": "^1.0.0-rc.12",
+    "crc": "^4.3.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.1.1",
     "framer-motion": "^10.16.4",
