--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_NODE_NETWORK=mainnet
 NEXT_PUBLIC_NODE_URL=https://mainnet-api.algonode.cloud
+NEXT_PUBLIC_INDEXER_URL=https://mainnet-idx.algonode.cloud
