--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.11.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-tooltip": "^5.5.1",
     "react-virtualized": "^9.22.5",
     "tailwindcss": "^3.3.3",
