--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-share": "^4.4.1",
     "react-tooltip": "^5.5.1",
     "react-virtualized": "^9.22.5",
     "tailwindcss": "^3.3.3",
