--- a/.hintrc
+++ b/.hintrc
@@ -30,6 +30,13 @@
           "iframe[allow]"
         ]
       }
-    ]
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
+    ],
+    "disown-opener": "off"
   }
 }
