--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-share": "^4.4.1",
     "react-tooltip": "^5.5.1",
     "react-virtualized": "^9.22.5",
+    "recharts": "^2.9.3",
     "tailwindcss": "^3.3.3",
     "typescript": "4.9.5",
     "web3.storage": "^4.5.5"
