--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
     "@blockshake/defly-connect": "^1.1.5",
     "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/icons": "^2.1.1",
@@ -43,6 +44,7 @@
     "framer-motion": "^10.16.4",
     "fs-extra": "^11.1.1",
     "gh-pages": "^6.0.0",
+    "graphql": "^16.8.1",
     "ipfs-http-client": "^60.0.1",
     "minimist": "^1.2.8",
     "moment-timezone": "^0.5.43",
