progressive overload tool

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "axios": "^1.6.0",
     "big.js": "^6.2.1",
     "bs58": "^5.0.0",
+    "chart.js": "^4.4.0",
+    "chartjs-chart-radial-gauge": "^1.1.0",
     "cheerio": "^1.0.0-rc.12",
     "crc": "^4.3.2",
     "eslint": "8.43.0",
@@ -52,6 +54,7 @@
     "next": "^14.0.1",
     "p-ratelimit": "^1.0.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.11.0",
