--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "react-icons": "^4.11.0",
     "react-responsive-carousel": "^3.2.23",
     "react-share": "^4.4.1",
+    "react-slick": "^0.29.0",
     "react-tooltip": "^5.5.1",
     "react-virtualized": "^9.22.5",
     "recharts": "^2.9.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.3",
     "typescript": "4.9.5",
     "web3.storage": "^4.5.5"
