--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
   "devDependencies": {
     "@types/big.js": "^6.1.6",
     "@types/fs-extra": "^11.0.2",
+    "@types/react-slick": "^0.23.12",
     "eslint-config-prettier": "^8.6.0",
     "postcss": "^8.4.21",
     "prettier": "2.8.8"
