--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "next": "^14.0.1",
     "p-ratelimit": "^1.0.1",
     "react": "18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
