removed meal template 001

--- a/.hintrc
+++ b/.hintrc
@@ -34,9 +34,11 @@
     "axe/name-role-value": [
       "default",
       {
-        "link-name": "off"
+        "link-name": "off",
+        "button-name": "off"
       }
     ],
-    "disown-opener": "off"
+    "disown-opener": "off",
+    "button-type": "off"
   }
 }
