--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "recharts": "^2.9.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.3",
+    "toast": "^0.5.4",
     "typescript": "4.9.5",
     "web3.storage": "^4.5.5"
   },
